# ConstructiveParsing

./: JInfer.cabal  README.md
app/: Main.hs
src/: Construction.hs  Syntax.hs  Types.hs  TypesFlatVar.hs  TypesTupleVer.hs
